objects/vlocity_cmt__VlocityAction__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ActionIcon__c</fullName>
        <inlineHelpText>If an image is uploaded here, it will take precedent over the Vlocity Icon. The image will automatically be resized to 22px wide in the Action.</inlineHelpText>
        <label>Custom Icon</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdditionalFilter__c</fullName>
        <label>Additional Filter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableTypes__c</fullName>
        <label>Applicable Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Aloha Home</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Community Home</fullName>
                </value>
                <value>
                    <fullName>Console Home</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>ContractVersion__c</fullName>
                </value>
                <value>
                    <fullName>Demo Link</fullName>
                </value>
                <value>
                    <fullName>Device Support</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Guided Help</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Mobile Launch Pad</fullName>
                </value>
                <value>
                    <fullName>Network &amp; Coverage</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>vlocity_cmt__VlocityInteraction__c</fullName>
                </value>
                <value>
                    <fullName>vlocity_cmt__CustomerInteractionTopic__c</fullName>
                </value>
                <value>
                    <fullName>vlocity_cmt__CustomerInteraction__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableUserProfiles__c</fullName>
        <label>Applicable User Profile</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vlocity Admin</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Vlocity Partner Community User</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayLabel__c</fullName>
        <label>Display Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayOn__c</fullName>
        <label>Display On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filter__c</fullName>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeClassName__c</fullName>
        <label>Invocation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InvokeMethodName__c</fullName>
        <label>Invocation Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsSeedAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Seed Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LinkType__c</fullName>
        <label>Link Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OmniScript</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>ConsoleCards</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpenURLMode__c</fullName>
        <label>Open URL in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Window</fullName>
                    <default>true</default>
                    <label>Current Window</label>
                </value>
                <value>
                    <fullName>New Tab / Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To State</label>
        <referenceTo>vlocity_cmt__VlocityState__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>Vlocity_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateModelId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Model</label>
        <referenceTo>vlocity_cmt__VlocityStateModel__c</referenceTo>
        <relationshipLabel>Vlocity Actions</relationshipLabel>
        <relationshipName>VlocityActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__URL__c</fullName>
        <label>Target URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UrlParameters__c</fullName>
        <label>URL Parameter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationClassName__c</fullName>
        <label>Validation Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMethodName__c</fullName>
        <label>Validation Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VlocityIcon__c</fullName>
        <defaultValue>&apos;icon-v-document1-line&apos;</defaultValue>
        <inlineHelpText>Choose an icon from the list of icons below the Vlocity Action Detail (will not show up in Vlocity Action Edit) by copying its class name here (i.e. icon-v-document1-line). Use attachment to load custom image.</inlineHelpText>
        <label>Vlocity Icon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Action</label>
    <listViews>
        <fullName>Account_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Account</value>
        </filters>
        <label>Account Actions</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__ApplicableTypes__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>vlocity_cmt__Filter__c</columns>
        <columns>vlocity_cmt__ApplicableUserProfiles__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Actions</label>
    </listViews>
    <listViews>
        <fullName>AllClass</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__ApplicableTypes__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__InvokeClassName__c</columns>
        <columns>vlocity_cmt__InvokeMethodName__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Class Actions</label>
    </listViews>
    <listViews>
        <fullName>Aloha_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Aloha Home</value>
        </filters>
        <label>Aloha Actions</label>
    </listViews>
    <listViews>
        <fullName>Asset_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__ApplicableTypes__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Asset</value>
        </filters>
        <label>Asset Actions</label>
    </listViews>
    <listViews>
        <fullName>Community_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Community Home</value>
        </filters>
        <label>Community Actions</label>
    </listViews>
    <listViews>
        <fullName>Console_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Console Home</value>
        </filters>
        <label>Console Actions</label>
    </listViews>
    <listViews>
        <fullName>Contact_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Contact</value>
        </filters>
        <label>Contact Actions</label>
    </listViews>
    <listViews>
        <fullName>Contract_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>vlocity_cmt__ContractVersion__c,Contract</value>
        </filters>
        <label>Contract Actions</label>
    </listViews>
    <listViews>
        <fullName>Demo_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Demo Link</value>
        </filters>
        <label>Demo Actions</label>
    </listViews>
    <listViews>
        <fullName>Interaction_Actions</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>vlocity_cmt__VlocityInteraction__c,vlocity_cmt__CustomerInteraction__c</value>
        </filters>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>vlocity_cmt__CustomerInteractionTopic__c</value>
        </filters>
        <label>Interaction Actions</label>
    </listViews>
    <listViews>
        <fullName>Mobile_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Mobile Launch Pad</value>
        </filters>
        <label>Mobile Actions</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity Actions</label>
    </listViews>
    <listViews>
        <fullName>Order_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Order</value>
        </filters>
        <label>Order Actions</label>
    </listViews>
    <listViews>
        <fullName>Quote_Actions</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__DisplayLabel__c</columns>
        <columns>vlocity_cmt__DisplayOn__c</columns>
        <columns>vlocity_cmt__LinkType__c</columns>
        <columns>vlocity_cmt__OpenURLMode__c</columns>
        <columns>vlocity_cmt__URL__c</columns>
        <columns>vlocity_cmt__UrlParameters__c</columns>
        <columns>vlocity_cmt__VlocityIcon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ApplicableTypes__c</field>
            <operation>includes</operation>
            <value>Quote</value>
        </filters>
        <label>Quote Actions</label>
    </listViews>
    <nameField>
        <label>Vlocity Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>